test/e2e/chainsaw/single-httproute-mirror/assertions/httproute-after-cleanup.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-mirror
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - backendRefs:
        - name: argo-rollouts-stable-service
        - name: argo-rollouts-canary-service
          (weight): 0
